--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                                                     <tr>
                                                         <td align="left" valign="top" style="text-align: center; margin: 0; padding: 0 50px 40px; line-height: 28px; font-family: 'Roboto','Helvetica Neue',Arial, sans-serif; font-size: 16px; font-weight: 300; color: #000000">
                                                             <p style="margin: 0; padding: 0; color: #000000;">
-                                                                Вы выиграли промокод на скидку 5%. <br>
-                                                                Промо код: CP-NFPDT-XMATFKA
+                                                                Вы мега крут. You are the best of the best
                                                             </p>
                                                         </td>
                                                     </tr>
