--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                                     <tr>
                                                         <td align="center" valign="top" style="text-align: center; margin: 0; padding: 0 50px 20px; line-height: 28px; font-family: 'Roboto','Helvetica Neue',Arial, sans-serif; font-size: 28px; font-weight: 300; color: #000000">
                                                             <p style="margin: 0; padding: 0; color: #000000;">
-                                                                Поздравляем!
+                                                                Поздравляем!!!
                                                             </p>
                                                         </td>
                                                     </tr>
